fix: toast size on smaller screens

--- a/src/app/core/components/toast/toast.component.scss
+++ b/src/app/core/components/toast/toast.component.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   height: 0;
+  width: 100%;
 }
 
 .e-toast {
@@ -22,6 +23,7 @@
   cursor: pointer;
   box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.5);
   user-select: none;
+  font-weight: 500;
 
   &__button {
     margin-left: auto;
@@ -31,5 +33,9 @@
       margin-left: 6px;
       margin-top: 1px;
     }
+  }
+
+  @media screen and (max-width: 482px) {
+    max-width: calc(100% - 40px);
   }
 }
